@@ -104,7 +104,7 @@ INSERT INTO static_countries VALUES ('18', '0', '0', 'BB', 'BRB', '52', '29', 'B
 INSERT INTO static_countries VALUES ('19', '0', '0', 'BD', 'BGD', '50', '34', 'গনপ্রজাতন্ত্রী বাংলা', 'People’s Republic of Bangladesh', 'Dhaka', 'bd', 'BDT', '50', '880', '0', '1', '0', 'বাংলাদেশ', 'Bangladesh', '1');
 INSERT INTO static_countries VALUES ('20', '0', '0', 'BE', 'BEL', '56', '155', 'Koninkrijk België / Royaume de Belgique', 'Kingdom of Belgium', 'Brussels', 'be', 'EUR', '978', '32', '1', '1', '0', 'Belgique', 'Belgium', '1');
 INSERT INTO static_countries VALUES ('21', '0', '0', 'BF', 'BFA', '854', '11', 'Burkina Faso', 'Burkina Faso', 'Ouagadougou', 'bf', 'XOF', '952', '226', '0', '1', '0', 'Burkina', 'Burkina Faso', '1');
-INSERT INTO static_countries VALUES ('22', '0', '0', 'BG', 'BGR', '100', '151', 'Република България', 'Republic of Bulgaria', 'Sofia', 'bg', 'BGL', '100', '359', '1', '1', '0', 'България', 'Bulgaria', '1');
+INSERT INTO static_countries VALUES ('22', '0', '0', 'BG', 'BGR', '100', '151', 'Република България', 'Republic of Bulgaria', 'Sofia', 'bg', 'BGL', '100', '359', '1', '1', '0', 'България (Bulgaria)', 'Bulgaria', '1');
 INSERT INTO static_countries VALUES ('23', '0', '0', 'BH', 'BHR', '48', '145', 'مملكة البحرين', 'Kingdom of Bahrain', 'Manama', 'bh', 'BHD', '48', '973', '0', '1', '0', 'البحري', 'Bahrain', '1');
 INSERT INTO static_countries VALUES ('24', '0', '0', 'BI', 'BDI', '108', '14', 'Republika y\'u Burundi', 'Republic of Burundi', 'Bujumbura', 'bi', 'BIF', '108', '257', '0', '1', '0', 'Burundi', 'Burundi', '1');
 INSERT INTO static_countries VALUES ('25', '0', '0', 'BJ', 'BEN', '204', '11', 'République du Bénin', 'Republic of Benin', 'Porto Novo', 'bj', 'XOF', '952', '229', '0', '1', '0', 'Bénin', 'Benin', '1');
@@ -150,7 +150,7 @@ INSERT INTO static_countries VALUES ('64', '0', '0', 'ER', 'ERI', '232', '14', '
 INSERT INTO static_countries VALUES ('65', '0', '0', 'ES', 'ESP', '724', '39', 'Reino de España', 'Kingdom of Spain', 'Madrid', 'es', 'EUR', '978', '34', '1', '8', '0', 'España', 'Spain', '1');
 INSERT INTO static_countries VALUES ('66', '0', '0', 'ET', 'ETH', '231', '14', 'የኢትዮጵያ ፌዴራላዊ', 'Federal Democratic Republic of Ethiopia', 'Addis Ababa', 'et', 'ETB', '230', '251', '0', '1', '0', 'ኢትዮጵያ', 'Ethiopia', '1');
 INSERT INTO static_countries VALUES ('67', '0', '0', 'FI', 'FIN', '246', '154', 'Suomen Tasavalta / Republiken Finland', 'Republic of Finland', 'Helsinki', 'fi', 'EUR', '978', '358', '1', '1', '0', 'Suomi', 'Finland', '1');
-INSERT INTO static_countries VALUES ('68', '0', '0', 'FJ', 'FJI', '242', '54', 'Republic of the Fiji Islands / Matanitu Tu-Vaka-i-koya ko Vi', 'Republic of the Fiji Islands', 'Suva', 'fj', 'FJD', '242', '679', '0', '1', '0', 'Viti', 'Fiji', '1');
+INSERT INTO static_countries VALUES ('68', '0', '0', 'FJ', 'FJI', '242', '54', 'Republic of Fiji / Matanitu Tu-Vaka-i-koya ko Vi', 'Republic of Fiji', 'Suva', 'fj', 'FJD', '242', '679', '0', '1', '0', 'Fiji / Viti', 'Fiji', '1');
 INSERT INTO static_countries VALUES ('69', '0', '0', 'FK', 'FLK', '238', '5', 'Falkland Islands', 'Falkland Islands', 'Stanley', 'fk', 'FKP', '238', '500', '0', '1', '0', 'Falkland Islands', 'Falkland Islands', '0');
 INSERT INTO static_countries VALUES ('70', '0', '0', 'FM', 'FSM', '583', '57', 'Federated States of Micronesia', 'Federated States of Micronesia', 'Palikir', 'fm', 'USD', '840', '691', '0', '1', '0', 'Micronesia', 'Micronesia', '1');
 INSERT INTO static_countries VALUES ('71', '0', '0', 'FO', 'FRO', '234', '154', 'Føroyar / Færøerne', 'Faroe Islands', 'Thorshavn', 'fo', 'DKK', '208', '298', '0', '1', '0', 'Føroyar / Færøerne', 'Faroes', '0');
@@ -219,7 +219,7 @@ INSERT INTO static_countries VALUES ('133', '0', '0', 'MG', 'MDG', '450', '14', 
 INSERT INTO static_countries VALUES ('134', '0', '0', 'MH', 'MHL', '584', '57', 'Aolepān Aorōkin M̧ajeļ / Republic of the Marshall Islands', 'Republic of the Marshall Islands', 'Dalap-Uliga-Darrit (DUD)', 'mh', 'USD', '840', '692', '0', '1', '0', 'Marshall Islands', 'Marshall Islands', '1');
 INSERT INTO static_countries VALUES ('135', '0', '0', 'MK', 'MKD', '807', '39', 'Република Македонија', 'Republic of Macedonia', 'Skopje', 'mk', 'MKD', '807', '389', '0', '1', '0', 'Македонија', 'Macedonia', '1');
 INSERT INTO static_countries VALUES ('136', '0', '0', 'ML', 'MLI', '466', '11', 'République du Mali', 'Republik Mali', 'Bamako', 'ml', 'XOF', '952', '223', '0', '1', '0', 'Mali', 'Mali', '1');
-INSERT INTO static_countries VALUES ('137', '0', '0', 'MM', 'MMR', '104', '35', 'Pyidaungzu Myanma Naingngandaw', 'Union of Myanmar', 'Yangon', 'mm', 'MMK', '104', '95', '0', '1', '0', 'Myanmar', 'Myanmar', '1');
+INSERT INTO static_countries VALUES ('137', '0', '0', 'MM', 'MMR', '104', '35', 'Pyidaungzu Myanma Naingngandaw', 'Republic of the Union of Myanmar', 'Yangon', 'mm', 'MMK', '104', '95', '0', '1', '0', 'Myanmar', 'Myanmar', '1');
 INSERT INTO static_countries VALUES ('138', '0', '0', 'MN', 'MNG', '496', '30', 'Монгол Улс', 'Mongolia', 'Ulan Bator', 'mn', 'MNT', '496', '976', '0', '1', '0', 'Монгол Улс', 'Mongolia', '1');
 INSERT INTO static_countries VALUES ('139', '0', '0', 'MO', 'MAC', '446', '30', '中華人民共和國澳門特別行政區 / Região Administrativa Especial de Macau da República Popular da China', 'Macao SAR of the People’s Republic of China', 'Macau', 'mo', 'MOP', '446', '853', '0', '1', '0', '澳門 / Macau', 'Macao SAR of China', '0');
 INSERT INTO static_countries VALUES ('140', '0', '0', 'MP', 'MNP', '580', '57', 'Commonwealth of the Northern Mariana Islands', 'Commonwealth of the Northern Mariana Islands', 'Garapan', 'mp', 'USD', '840', '1670', '0', '0', '0', 'Northern Marianas', 'Northern Marianas', '0');
@@ -321,7 +321,7 @@ INSERT INTO static_countries VALUES ('236', '0', '0', 'ZM', 'ZMB', '894', '14', 
 INSERT INTO static_countries VALUES ('237', '0', '0', 'ZW', 'ZWE', '716', '14', 'Republic of Zimbabwe', 'Republic of Zimbabwe', 'Harare', 'zw', 'ZWD', '716', '263', '0', '1', '0', 'Zimbabwe', 'Zimbabwe', '1');
 INSERT INTO static_countries VALUES ('238', '0', '0', 'PS', 'PSE', '275', '145', 'دولة فلسطين', 'Palestinian territories', '', 'ps', '0', '0', '0', '0', '0', '0', 'فلسطين', 'Palestine', '0');
 INSERT INTO static_countries VALUES ('239', '0', '1', 'CS', 'CSG', '891', '39', 'Државна заједница Србија и Црна Гора', 'State Union of Serbia and Montenegro', 'Belgrade', 'cs', 'CSD', '891', '381', '0', '0', '0', 'Србија и Црна Гора', 'Serbia and Montenegro', '1');
-INSERT INTO static_countries VALUES ('240', '0', '0', 'AX', 'ALA', '248', '154', 'Landskapet Åland', 'Åland Islands', 'Mariehamn', 'fi', 'EUR', '978', '35818', '1', '0', '0', 'Landskapet Åland', 'Åland Islands', '0');
+INSERT INTO static_countries VALUES ('240', '0', '0', 'AX', 'ALA', '248', '154', 'Landskapet Åland', 'Åland Islands', 'Mariehamn', 'fi', 'EUR', '978', '35818', '1', '0', '0', 'Åland', 'Åland', '0');
 INSERT INTO static_countries VALUES ('241', '0', '0', 'HM', 'HMD', '334', '53', 'Heard Island and McDonald Islands', 'Heard Island and McDonald Islands', '', '', 'AUD', '36', '0', '0', '0', '0', 'Heard Island and McDonald Islands', 'Heard Island and McDonald Islands', '0');
 INSERT INTO static_countries VALUES ('242', '0', '0', 'ME', 'MNE', '499', '39', 'Republike Crne Gore', 'Montenegro', 'Podgorica', 'me', 'EUR', '978', '382', '0', '1', '0', 'Crna Gora', 'Montenegro', '1');
 INSERT INTO static_countries VALUES ('243', '0', '0', 'RS', 'SRB', '688', '39', 'Republika Srbija', 'Republic of Serbia', 'Belgrade', 'rs', 'RSD', '941', '381', '0', '1', '0', 'Srbija', 'Serbia', '1');
@@ -330,7 +330,7 @@ INSERT INTO static_countries VALUES ('245', '0', '0', 'GG', 'GGY', '831', '154',
 INSERT INTO static_countries VALUES ('246', '0', '0', 'IM', 'IMN', '833', '154', 'Isle of Man / Ellan Vannin', 'Isle of Man', 'Douglas', 'im', 'GBP', '826', '44', '0', '5', '0', 'Mann / Mannin', 'Isle of Man', '0');
 INSERT INTO static_countries VALUES ('247', '0', '0', 'MF', 'MAF', '652', '29', 'Collectivité de Saint-Martin', 'Collectivity of Saint Martin', 'Marigot', 'fr', 'EUR', '978', '590', '0', '1', '0', 'Saint-Martin', 'Saint Martin', '0');
 INSERT INTO static_countries VALUES ('248', '0', '0', 'BL', 'BLM', '652', '29', 'Collectivité de Saint-Barthélemy', 'Collectivity of Saint Barthélemy', 'Gustavia', 'fr', 'EUR', '978', '590', '0', '1', '0', 'Saint-Barthélemy', 'Saint Barthélemy', '0');
-INSERT INTO static_countries VALUES ('249', '0', '0', 'BQ', 'BES', '535', '29', 'Bonaire, Sint Eustatius en Saba', 'Bonaire, Saint Eustatius and Saba', '', 'bq', '0', '0', '599', '0', '0', '0', 'Bonaire, Sint Eustatius en Saba', 'Bonaire, Saint Eustatius and Saba', '0');
+INSERT INTO static_countries VALUES ('249', '0', '0', 'BQ', 'BES', '535', '29', 'Bonaire, Sint Eustatius en Saba', 'Bonaire, Sint Eustatius and Saba', '', 'bq', '0', '0', '599', '0', '0', '0', 'Bonaire, Sint Eustatius en Saba', 'Bonaire, Sint Eustatius and Saba', '0');
 INSERT INTO static_countries VALUES ('250', '0', '0', 'CW', 'CUW', '531', '29', 'Curaçao', 'Curaçao', 'Willemstad', 'cw', '0', '0', '599', '0', '0', '0', 'Curaçao', 'Curaçao', '0');
 INSERT INTO static_countries VALUES ('251', '0', '0', 'SX', 'SXM', '534', '29', 'Sint Maarten', 'Sint Maarten', 'Philipsburg', 'sx', '0', '0', '599', '0', '0', '0', 'Sint Maarten', 'Sint Maarten', '0');
 
