@@ -4,6 +4,7 @@
 	* Fixed issue #32094: Usage of deprecated testInt method (Thanks to Stefan Galinski)
 	* Fixed issue #29241: NZ static currencies thousands decimal
 	* Fixed issue #28830: cn_short_local for Czech Republic misses an accent mark
+	* Added feature #32635: Update countries to level of ISO 3166-1:2006 - Newsletter VI-9 (2010-06-12)
 
 2011-01-25  Stanislas Rolland  <typo3@sjbr.ca>
 
